--- a/src/main/resources/view/card.fxml
+++ b/src/main/resources/view/card.fxml
@@ -4,11 +4,11 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<fx:root prefHeight="110.0" prefWidth="100.0" stylesheets="@menuStyle.css" type="AnchorPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root prefHeight="77.0" prefWidth="70.0" stylesheets="@menuStyle.css" type="AnchorPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <AnchorPane fx:id="backgroundPane" onMouseClicked="#onClick" prefHeight="110.0" prefWidth="100.0" styleClass="card_Default" stylesheets="@menuStyle.css">
+      <AnchorPane fx:id="backgroundPane" maxHeight="77.0" maxWidth="70.0" minHeight="77.0" minWidth="70.0" onMouseClicked="#onClick" prefHeight="77.0" prefWidth="70.0" styleClass="card_Default" stylesheets="@menuStyle.css">
          <children>
-            <ImageView fx:id="image" fitHeight="100.0" fitWidth="100.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="image" fitHeight="70.0" fitWidth="70.0" layoutY="7.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@images/shapes/ORANGECIRCLE.png" />
                </image>
