--- a/src/main/resources/view/menu.fxml
+++ b/src/main/resources/view/menu.fxml
@@ -141,7 +141,7 @@
                         </Label>
                      </children>
                   </Pane>
-                  <Pane fx:id="optionsButton" layoutX="250.0" layoutY="438.0" onMouseClicked="#optionsButtonPressed" prefHeight="60.0" prefWidth="187.0" styleClass="menuButton">
+                  <Pane fx:id="optionsButton" layoutX="250.0" layoutY="438.0" prefHeight="60.0" prefWidth="187.0" styleClass="menuButton">
                      <children>
                         <Label alignment="CENTER" layoutX="25.0" layoutY="6.0" prefHeight="40.0" prefWidth="137.0" style="-fx-text-fill: white;" styleClass="whiteMenuText" text="Mute" textAlignment="CENTER">
                            <font>
